@@ -25,11 +25,11 @@ function Handler.on_created_entity(event)
 end
 
 for _, event in ipairs({
-  -- defines.events.on_built_entity,
-  -- defines.events.on_robot_built_entity,
+  defines.events.on_built_entity,
+  defines.events.on_robot_built_entity,
   defines.events.on_space_platform_built_entity,
-  -- defines.events.script_raised_built,
-  -- defines.events.script_raised_revive,
+  defines.events.script_raised_built,
+  defines.events.script_raised_revive,
   defines.events.on_entity_cloned,
 }) do
   script.on_event(event, Handler.on_created_entity, {
